Version 3.2 beta 7 <2020-03-01>
-------------------------------
  
  * fixed setting shadow if multiple objects are selected
  * added button home-moon (thanks to ecodrv)

Version 3.2 beta 6 <2020-01-01>
-------------------------------
  
  * fixed slow loading of project files
  * fixed PCM support (experemental)

Version 3.2 beta 5 <2019-11-17>
-------------------------------
  
  * settings core: only one of checkboxes hq or xhq can be selected
  * some improvements of PCM support (experemental)
  * win32/win64: updated Manolito's VBR plug-in
  * win32/win64: updated ffmpeg to version 4.2.1

Version 3.2 beta 4 <2019-11-09>
-------------------------------
  
  * disable properties button by omitted video streams in title properties dialog

Version 3.2 beta 3 <2019-11-03>
-------------------------------
  
  * fixed generation of DVD if some video streams are omitted

Version 3.2 beta 2 <2019-10-27>
-------------------------------
  
  * disabled format selection for mjpeg streams (preview images)
  * fixed selection of transparent highlighted colors
  * added maroon-frame button (thanks to ecodrv)

Version 3.2 beta 1 <2019-10-11>
-------------------------------

  * added initial support of transparent highlighted colors
  * ignore mjpeg streams (preview images)
  * fixed creation of dvd with more than 100 hours
  * fixed movie-button

Version 3.1.2 <2019-08-02>
--------------------------

  * unix: changed to use configuration file .dvdstyler/dvdstyler

Version 3.1.1 <2019-06-24>
--------------------------

  * updated some translation 

Version 3.1 <2019-05-19>
------------------------

  * added some new buttons (movie, settings, etc.)
  * added possibility to create a new button from SVG file
  * added possibility to edit buttons
  * added frame-text button and template (thanks to ecodrv)
  * fixed functionality of command "call last menu;" if specified for a chapter
  * added support of HD videos (experimental, can be activated in settings)