@@ -223,9 +223,12 @@ wxSvgXmlNode* Stream::GetXML(DVDFileType type, Vob* vob) {
 
 /** Returns true if copy of video stream is possible */
 bool Stream::IsCopyPossible() {
-	if (GetType() != stVIDEO)
-		return true;
-	return m_sourceCodecName.StartsWith(wxT("mpeg2video"));
+	if (GetType() == stVIDEO) {
+		return m_sourceCodecName.StartsWith(wxT("mpeg2video"));
+	} else if (GetType() == stAUDIO) {
+		return !m_sourceCodecName.StartsWith("pcm"); // if not PCM, because PCM needs to be repacked to big endian
+	}
+	return true;
 }
 
 /** Returns true if video stream is DVD compliant */
